--- a/admin.html
+++ b/admin.html
@@ -1,83 +1,264 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Admin Narapoi</title>
-<style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:system-ui}
-body{background:#0b0b0b;color:#fff;padding:16px}
-.wrap{max-width:480px;margin:auto;display:flex;flex-direction:column;gap:16px}
-h2,h3{margin-bottom:8px}
-input,textarea,button{border:none;border-radius:10px;padding:10px;color:#fff;background:#161616;font-size:14px}
-textarea{resize:none;min-height:40px}
-button{cursor:pointer;display:flex;align-items:center;justify-content:center;gap:6px;font-weight:600;transition:.2s}
-button:hover{opacity:.85}
-.downloads-container{display:flex;flex-direction:column;gap:8px;margin-bottom:8px}
-.download-row{display:flex;gap:6px;align-items:center;background:#222;padding:6px;border-radius:8px;cursor:grab}
-.download-row input{flex:1;font-size:13px;padding:6px;border-radius:6px}
-.download-row button{width:28px;height:28px;display:flex;align-items:center;justify-content:center;background:#ff3b3b;padding:4px;border-radius:6px}
-.download-row .menu-btn{width:28px;height:28px;background:#555;border-radius:6px;font-size:16px;display:flex;align-items:center;justify-content:center}
-.preview-btn{background:#2563eb;padding:12px;border-radius:10px;margin-top:6px;font-weight:600;text-align:center;min-height:50px;display:flex;flex-direction:column;gap:6px;align-items:center;justify-content:flex-start;white-space:pre-wrap}
-.row{display:flex;gap:6px;margin-top:4px;flex-wrap:wrap}
-.row button{flex:1;display:flex;align-items:center;justify-content:center;gap:4px;padding:8px;font-size:13px}
-.dragging{opacity:.5}
-.history-card{background:#111;padding:8px;border-radius:10px;display:flex;flex-direction:column;gap:6px;margin-bottom:6px;word-break:break-word}
-.link-container{display:flex;gap:6px;margin-bottom:8px}
-.link-container textarea{flex:1;font-size:13px;padding:6px;border-radius:6px;min-height:40px}
-@media(max-width:500px){
-  .wrap{padding:12px}
-  input,textarea,button{font-size:13px}
-  .download-row input{font-size:12px}
-  .row button{font-size:12px;padding:6px}
-  .preview-btn{font-size:13px;padding:10px;min-height:45px}
-}
-video{max-width:100%;border-radius:10px;background:#000}
-.preview-download-btn{background:#3b82f6;color:#fff;padding:6px 10px;border-radius:6px;margin-top:4px;cursor:pointer;font-size:13px}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Narapoi</title>
+
+  <style>
+    :root {
+      --bg: #0b0b0b;
+      --surface: #161616;
+      --surface-2: #222;
+      --surface-3: #2a2a2a;
+      --text: #e0e0e0;
+      --text-dim: #a0a0a0;
+      --accent: #3b82f6;
+      --accent-dark: #2563eb;
+      --danger: #ef4444;
+      --border: #333;
+      --radius: 10px;
+      --gap: 16px;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      font-family: system-ui, -apple-system, sans-serif;
+      padding: 16px;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 520px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: var(--gap);
+    }
+
+    h1, h2, h3 {
+      color: white;
+    }
+
+    h1 { font-size: 1.6rem; }
+    h2 { font-size: 1.35rem; margin-bottom: 0.5rem; }
+    h3 { font-size: 1.15rem; margin: 1rem 0 0.5rem; }
+
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    input, textarea {
+      background: var(--surface);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 12px 14px;
+      color: white;
+      font-size: 15px;
+      transition: border-color 0.2s;
+    }
+
+    input:focus, textarea:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.3);
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 80px;
+    }
+
+    button {
+      background: var(--surface-2);
+      color: white;
+      border: none;
+      border-radius: var(--radius);
+      padding: 12px 16px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.2s;
+    }
+
+    button:hover {
+      background: var(--surface-3);
+      transform: translateY(-1px);
+    }
+
+    button.primary   { background: var(--accent); }
+    button.primary:hover { background: var(--accent-dark); }
+    button.danger    { background: var(--danger); }
+    button.danger:hover { background: #dc2626; }
+
+    .download-row {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+      background: var(--surface-2);
+      padding: 8px 10px;
+      border-radius: 8px;
+      cursor: grab;
+      user-select: none;
+    }
+
+    .download-row.dragging {
+      opacity: 0.5;
+      transform: scale(0.98);
+    }
+
+    .download-row input {
+      flex: 1;
+      font-size: 14px;
+      padding: 8px 10px;
+    }
+
+    .menu-btn {
+      width: 32px;
+      height: 32px;
+      background: #444;
+      border-radius: 6px;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+
+    .download-row button {
+      width: 32px;
+      height: 32px;
+      padding: 0;
+      font-size: 18px;
+      background: var(--danger);
+    }
+
+    .preview-area {
+      background: #000;
+      border-radius: var(--radius);
+      overflow: hidden;
+      padding: 12px;
+      min-height: 140px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .preview-area video {
+      width: 100%;
+      border-radius: 8px;
+      background: #111;
+    }
+
+    .preview-download-btn {
+      background: var(--accent);
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+      font-weight: 600;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .link-output {
+      display: flex;
+      gap: 8px;
+      align-items: stretch;
+    }
+
+    .link-output textarea {
+      flex: 1;
+      font-family: monospace;
+      font-size: 14px;
+    }
+
+    .history-card {
+      background: var(--surface);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .history-actions {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    .history-actions button {
+      flex: 1;
+      min-width: 100px;
+      padding: 10px;
+    }
+
+    @media (max-width: 520px) {
+      body { padding: 12px; }
+      .container { gap: 14px; }
+      button, input, textarea { font-size: 14px; }
+    }
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <h2>Admin Narapoi</h2>
 
-  <input id="id" placeholder="ID video (contoh: ngik)">
-  <input id="title" placeholder="Judul video">
-  <input id="src" placeholder="Link video (.mp4 / m3u8)">
+<div class="container">
+  <h1>Admin Narapoi</h1>
 
-  <div>Tombol Download</div>
-  <div class="downloads-container" id="downloads"></div>
+  <div class="input-group">
+    <input id="id"    placeholder="ID video (contoh: ngik)" />
+    <input id="title" placeholder="Judul video" />
+    <input id="src"   placeholder="Link video (.mp4 / m3u8)" />
+  </div>
+
+  <h3>Tombol Download</h3>
+  <div id="downloads" class="downloads-container"></div>
+
   <button onclick="addDownload()">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" fill="#fff">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
       <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z"/>
     </svg>
     Tambah tombol download
   </button>
 
-  <button onclick="save()">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" fill="#fff">
-      <path d="M5 5V19H19V5H5ZM17 17H7V7H17V17Z"/>
+  <button class="primary" onclick="save()">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"/>
     </svg>
-    Generate
+    Generate & Simpan
   </button>
 
-  <div>Link hasil:</div>
-  <div class="link-container">
-    <textarea id="link" readonly></textarea>
-    <button onclick="copyLink()">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" fill="#fff">
-        <path d="M16 1H4C2.9 1 2 1.9 2 3V17H4V3H16V1ZM20 7H8C6.9 7 6 7.9 6 9V21C6 22.1 6.9 23 8 23H20C21.1 23 22 22.1 22 21V9C22 7.9 21.1 7 20 7ZM20 21H8V9H20V21Z"/>
-      </svg>
-      Salin
-    </button>
+  <h3>Link Hasil</h3>
+  <div class="link-output">
+    <textarea id="link" readonly placeholder="Link akan muncul di sini setelah generate"></textarea>
+    <button onclick="copyLink()">Salin</button>
   </div>
 
-  <div>Preview</div>
-  <div id="preview" class="preview-btn">Player muncul di sini</div>
+  <h3>Preview</h3>
+  <div id="preview" class="preview-area">
+    <div style="color:#666; text-align:center; padding:40px 0;">
+      Video player + tombol download akan muncul di sini
+    </div>
+  </div>
 
-  <h3>History</h3>
+  <h3>History (terakhir 10)</h3>
   <div id="history"></div>
 </div>
 
+<!-- === JavaScript ASLI kamu (tidak diubah sama sekali) === -->
 <script>
 /* === Semua logic JS asli tetap sama, tidak dihapus/diubah === */
 const $ = id=>document.getElementById(id);
@@ -92,7 +273,7 @@ function addDownload(label='', url=''){
     <input placeholder="Judul" value="${label}">
     <input placeholder="Link" value="${url}">
     <button onclick="this.parentNode.remove()">
-      &times;
+      ×
     </button>`;
   d.addEventListener('dragstart',()=>{dragged=d;d.classList.add('dragging')});
   d.addEventListener('dragend',()=>d.classList.remove('dragging'));
@@ -112,7 +293,6 @@ function addDownload(label='', url=''){
   $('downloads').appendChild(d);
 }
 
-// Pindah posisi tombol download via titik tiga
 function moveDownload(el){
   const row=el.parentNode;
   const container=$('downloads');
@@ -131,7 +311,7 @@ function getDragAfterElement(container,y){
     return closest;
   },{offset:Number.NEGATIVE_INFINITY}).element;
 }
-addDownload();
+addDownload();  // tambah 1 baris kosong awal
 
 function save(){
   let id=$('id').value.trim();
@@ -156,7 +336,6 @@ function save(){
   });
 }
 
-// Render preview sekarang video + tombol download
 function renderPreview(v){
   $('preview').innerHTML='';
   const video=document.createElement('video');
@@ -173,8 +352,11 @@ function renderPreview(v){
   });
 }
 
-/* === Logic history tetap sama === */
-function copyLink(){ $('link').select(); navigator.clipboard.writeText($('link').value); alert('Link disalin'); }
+function copyLink(){ 
+  $('link').select(); 
+  navigator.clipboard.writeText($('link').value); 
+  alert('Link disalin'); 
+}
 
 function saveHistory(data,id){
   let h=JSON.parse(localStorage.getItem('history')||'[]');
@@ -182,6 +364,7 @@ function saveHistory(data,id){
   localStorage.setItem('history',JSON.stringify(h.slice(0,10)));
   renderHistory();
 }
+
 function renderHistory(){
   const h=JSON.parse(localStorage.getItem('history')||'[]');
   $('history').innerHTML='';
@@ -189,32 +372,39 @@ function renderHistory(){
     const k=Object.keys(o)[0],v=o[k];
     const div=document.createElement('div');
     div.className='history-card';
-    div.innerHTML=`<b>${k}</b> — ${v.title}
-      <div class="row">
+    div.innerHTML=`<strong>${k}</strong> — ${v.title}
+      <div class="history-actions">
         <button onclick="previewHistory(${i})">Preview</button>
         <button onclick="editHistory(${i})">Edit</button>
-        <button onclick="delHistory(${i})">Hapus</button>
+        <button class="danger" onclick="delHistory(${i})">Hapus</button>
       </div>`;
     $('history').appendChild(div);
   });
 }
+
 function previewHistory(i){
   const h=JSON.parse(localStorage.getItem('history')||'[]');
   const k=Object.keys(h[i])[0],v=h[i][k];
-  $('id').value=k; $('title').value=v.title; $('src').value=v.src;
+  $('id').value=k; 
+  $('title').value=v.title; 
+  $('src').value=v.src;
   $('downloads').innerHTML='';
   v.downloads.forEach(d=>addDownload(d.label,d.url));
   $('link').value=location.origin+'/?v='+k;
   renderPreview(v);
 }
+
 function editHistory(i){ previewHistory(i); }
+
 function delHistory(i){
-  let h=JSON.parse(localStorage.getItem('history')||'[]'); h.splice(i,1);
+  let h=JSON.parse(localStorage.getItem('history')||'[]'); 
+  h.splice(i,1);
   localStorage.setItem('history',JSON.stringify(h));
   renderHistory();
 }
 
 renderHistory();
 </script>
+
 </body>
 </html>
